Bug 418112 - HiDPI rendering problems
Summary: HiDPI rendering problems
Status: RESOLVED FIXED
Alias: None
Product: krename
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Guo Yunhe
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-23 22:56 UTC by markuss
Modified: 2020-10-05 14:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (157.54 KB, image/png)
2020-02-23 22:56 UTC, markuss
Details

Note You need to log in before you can comment on or make changes to this bug.
Description markuss 2020-02-23 22:56:46 UTC
Created attachment 126363 [details]
Screenshot

SUMMARY

KRename's GUI is not HiDPI enabled. See attached screenshot for details.
Comment 1 Heiko Becker 2020-02-24 22:02:32 UTC
Git commit 0ff8a14014b998bf6cc40aabbaa96ee8cf2f2f61 by Heiko Becker.
Committed on 24/02/2020 at 22:01.
Pushed by heikobecker into branch 'master'.

Make icons look sharp with HiDPI

M  +7    -7    src/krenamewindow.cpp
M  +1    -0    src/main.cpp
M  +6    -3    src/startupinfo.cpp

https://commits.kde.org/krename/0ff8a14014b998bf6cc40aabbaa96ee8cf2f2f61
Comment 2 Heiko Becker 2020-10-05 14:34:01 UTC
Git commit db032d5425337e52ca336975e9a74f9bb0799623 by Heiko Becker.
Committed on 05/10/2020 at 14:03.
Pushed by heikobecker into branch '5.0'.

Make icons look sharp with HiDPI

M  +7    -7    src/krenamewindow.cpp
M  +1    -0    src/main.cpp
M  +6    -3    src/startupinfo.cpp

https://invent.kde.org/utilities/krename/commit/db032d5425337e52ca336975e9a74f9bb0799623