Make icons look sharp with HiDPI

BUG: 418112